<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:orientation="vertical">

    <TextView
        android:id="@+id/tv_finger_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/dialog_fingerprint_title"
        android:textSize="20dp"
        android:layout_margin="10dp"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/iv_finger"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_margin="10dp"
            android:background="@drawable/fingerprint_icon"/>
    </RelativeLayout>

    <TextView
        android:id="@+id/tv_finger_msg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:gravity="center_horizontal"
        android:text="@string/dialog_fingerprint_msg"
        android:textSize="20dp"/>

    <Button
        android:id="@+id/btn_finger_cancel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_margin="10dp"
        android:background="@drawable/draw_rounded_button"
        android:text="@string/dialog_fingerprint_button_cancel"
        android:textColor="@android:color/white"
        android:textSize="20dp"
        android:textStyle="bold"/>


</LinearLayout>