<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:orientation="vertical">

    <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
                                        android:id="@+id/card_view"
                                        android:layout_width="match_parent"
                                        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/ll_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv_child_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="8dp"
                    android:text="@string/common_test_text"
                    android:textColor="#222"
                    android:textStyle="bold"/>
            </LinearLayout>

            <LinearLayout

                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:baselineAligned="false"
                android:orientation="horizontal">

                <LinearLayout

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">


                    <TextView
                        android:id="@+id/tv_child_date_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:padding="8dp"
                        android:text="@string/cardView_title1"
                        android:textColor="#222"
                        />


                    <TextView
                        android:id="@+id/tv_child_cost_number_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:padding="8dp"
                        android:text="@string/cardView_title2"
                        android:textColor="#222"
                        />

                    <TextView
                        android:id="@+id/tv_child_type_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:padding="8dp"
                        android:text="@string/cardView_title3"
                        android:textColor="#222"
                        />

                    <TextView
                        android:id="@+id/tv_child_cost_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:padding="8dp"
                        android:text="@string/cardView_title4"
                        android:textColor="#222"
                        />

                </LinearLayout>

                <LinearLayout

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tv_child_date_value"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:padding="8dp"
                        android:text="@string/common_test_text"
                        android:textColor="#222"
                        />


                    <TextView
                        android:id="@+id/tv_child_cost_number_value"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:padding="8dp"
                        android:text="@string/common_test_text"
                        android:textColor="#222"
                        />

                    <TextView
                        android:id="@+id/tv_child_type_value"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:padding="8dp"
                        android:text="@string/common_test_text"
                        android:textColor="#222"
                        />

                    <TextView
                        android:id="@+id/tv_child_cost_value"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:padding="8dp"
                        android:text="@string/common_test_text"
                        android:textColor="#222"
                        />

                </LinearLayout>
            </LinearLayout>

            <TextView
                android:layout_width="@dimen/ul_ui_dimen_fontSize_16u"
                android:layout_height="@dimen/ul_ui_dimen_fontSize_16u"
                android:text=""/>
        </LinearLayout>
    </android.support.v7.widget.CardView>
</LinearLayout>